<?xml version="1.0"?>
<package format="2">
  <name>apriltag_ros</name>
  <version>1.4.0</version>
  <description>Messages of external april tag node</description>

  <maintainer email="julia.sanchez@kitware.com">Julia Sanchez</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
